--- a/custum-div.js/index.html
+++ b/custum-div.js/index.html
@@ -19,11 +19,11 @@
     <br>
     <br>
     <label for="">Text Color</label>
-    <input id="inp4" type="color">
+    <input id="inp4" type="text">
     <br>
     <br>
     <label for="">Background-color</label>
-    <input id="inp5" type="color">
+    <input id="inp5" type="text">
     <br>
     <button id="btn1" onclick="createDiv()">create</button>
     <div id="custumDiv"></div>
